2017-03-13  Werner Lemberg  <wl@gnu.org>

	[ftdump] Show ID numbers for standard `name' table entries.

	* src/ftdump.c (EXPAND, XEXPAND, NAME_ID): New macros.
	(name_id): Use new macros.

2017-02-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (main): Label images.

2017-02-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgamma] Add box-filtered subpixel pattern.

	Two alternative patterns now demonstrate the importance of correct
	gamma for both grayscale and subpixel anti-aliasing, where it helps
	normalize thickness in the former and remove color fringes in the
	latter.

	* src/ftgamma.*: Updated.

2017-01-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Improve gamma ramp appearance.

	* src/ftstring.c (event_gamma_change, gamma_ramp_draw): Updated.

2017-01-28  Werner Lemberg  <wl@gnu.org>

	[ftdump] Always finalize FreeType.

	* src/ftdump.c (PanicZ, usage): Add `library' argument so that we
	can call `FT_Done_FreeType'.
	(main): Updated.

2017-01-28  Werner Lemberg  <wl@gnu.org>

	[ftdump] Sync with current FreeType.

	* src/ftdump.c (name_id): Use updated ID macros.
	Add new ID macros.

2017-01-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Align with current FreeType.

	* src/ftview.c (write_header): s/GB2312/PRC/.
	(Process_Event): `FT_Library_SetLcdFilterWeights' now enables
	filtering without `FT_Library_SetLcdFilter'.

2016-12-30  Werner Lemberg  <wl@gnu.org>

	* Version 2.7.1 released.
	=========================


	Tag sources with `VER-2-7-1'.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect.pro: Updated.

2016-12-27  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Minor.

	* src/ftmulti.c (Process_Event, main): If MM, round design
	coordinates.

2016-12-25  Werner Lemberg  <wl@gnu.org>

	Fixes for clang++.

	* Makefile (COMPILE): Don't add `-std=c99' if using a C++ compiler.

	* src/ftbench.c (_GNU_SOURCE): Declare only if not already defined.
