@@ -1,3 +1,9 @@
+2017-03-19  Brian Nixon  <nixonb@yahoo.com>
+
+	[graph] Make demo windows minimise-able on Win32 (#50582).
+
+	* graph/win32/grwin32.c (gr_win32_surface_init): Implement it.
+
 2017-03-13  Werner Lemberg  <wl@gnu.org>
 
 	[ftdump] Show ID numbers for standard `name' table entries.
